cargo-features = ["edition2021"]
[package]
name = "luno-rust-api"
version = "0.0.1"
authors = ["Samuelonoja <Samuelonoja970@gmail.com>"]
edition = "2021"
description = "The Async Rust Luno API brings the world of Bitcoin and Ethereum to your doorstep."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.10"
serde = {version="1.0.79", features=["derive"]}
serde_json = "1.0.79"
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
dotenv = "0.15.0"

[[test]]
name = "luno"
path = "src/test/test.rs"