[package]
name = "luno_rs"
version = "0.1.0"
authors = ["Samuelonoja <dev@sami.cx>"]
edition = "2021"
description = "Luno API Wrapper in rust lang."
keywords = ["bitcoin", "crypto", "api", "web", "luno"]
categories = ["api-bindings, web-programming::http-client, asynchronous"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/borngraced/luno-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.10"
serde = {version="1.0.79", features=["derive"]}
serde_json = "1.0.79"
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
dotenv = "0.15.0"
url = "2.2.2"

[[test]]
name = "luno"
path = "src/test/test.rs"

[build]
rustflags = ["-A", "unused_assignments"]
